PDE/jitfailure-dolfin_expression_df3771ee844f10030e0996b010ad0e24/error.log
/tmp/tmpdnl9jyr5/dolfin_expression_df3771ee844f10030e0996b010ad0e24.cpp: In member function ‘virtual void dolfin::dolfin_expression_df3771ee844f10030e0996b010ad0e24::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpdnl9jyr5/dolfin_expression_df3771ee844f10030e0996b010ad0e24.cpp:61:27: error: ‘kk’ was not declared in this scope
   61 |           values[0] = 0.5*kk*(x[0]+x[1]);
      |                           ^~
